--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,7 +137,7 @@ img {
   overflow: hidden;
   display: inline-block;
   border: 4px solid #282e34;
-  background: #1c1d1f;
+  background: #090e14;
   transform: scaleX(-1)
 }
 
